# BYD

./: CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
Components/: ACBar.qml  ACFan.qml  ACFunctionBar.qml  ColorSlider.qml  FunctionBar2.qml  FunctionBar3.qml  IconButton.qml  IconSwitch.qml  Navigation.qml  QuickSlider.qml  QuickTemperatureList.qml  QuickWind.qml  SettingsFunctionBar.qml  SettingsList.qml  SettingsModeBar.qml  StatusBar.qml  SwipeArea.qml
HMI/: AC.qml  App.qml  ControlCenter.qml  Home.qml  Settings.qml
Interface/: interface.cpp  interface.h
